--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
       <button class="form-button" type="submit">Start</button>
     </form>
 
-    <div class="loader"></div>
+    <span class="loader"></span>
     <ul class="gallery" id="gallery"></ul>
 
     <script type="module" src="./main.js" defer></script>
